Update readme and version numbers

--- a/readme.wp
+++ b/readme.wp
@@ -5,7 +5,7 @@ Donate link: http://www.jeremyfelt.com/wordpress/plugins/automatic-featured-imag
 Tags: featured image, media, photo, pictures, posts, photoblog, upload, automatic, custom post type, thumbnail, post thumbnails, post formats
 Requires at least: 3.2.1
 Tested up to: 3.4
-Stable tag: 0.6
+Stable tag: 0.7
 
 Automatic Featured Image Posts creates a new post with a Featured Image every time an image is uploaded.
 
@@ -59,6 +59,9 @@ That's it!
 
 == Changelog ==
 
+= 0.7 =
+* Fix a couple bugs with saving options when post formats aren't yet enabled.
+
 = 0.6 =
 *  Add filters to allow themes and plugins to change the post title, categories, and content before creation
 
@@ -85,6 +88,9 @@ That's it!
 
 
 == Upgrade Notice ==
+
+= 0.7 =
+* Bug fixes when saving options while post formats are not enabled
 
 = 0.6 =
 *  NEW - Filters added for post title, categories, and content.
