--- a/readme.wp
+++ b/readme.wp
@@ -1,7 +1,7 @@
 === Automatic Featured Image Posts ===
 
 Contributors: jeremyfelt
-Donate link: http://www.jeremyfelt.com/wordpress/plugins/automatic-featured-image-posts/
+Donate link: http://jeremyfelt.com/wordpress/plugins/automatic-featured-image-posts/
 Tags: featured image, media, photo, pictures, posts, photoblog, upload, automatic, custom post type, thumbnail, post thumbnails, post formats
 Requires at least: 3.2.1
 Tested up to: 3.4
